# gym-planner

./: Cargo.toml
api/: Cargo.toml
api/src/: main.rs
api/src/dto/: club_dto.rs  member_dto.rs  mod.rs
api/src/routes/: clubs.rs  members.rs  mod.rs
application/: Cargo.toml
application/src/: club_management_application.rs  lib.rs  member_management_application.rs
connectors/: Cargo.toml
connectors/src/: club_connector_default.rs  club_connector_trait.rs  lib.rs  member_connector_default.rs  member_connector_trait.rs
domain/src/: club.rs  lib.rs  member.rs
local-rest/: api.rest  create.rest  get-all.rest  get.rest
