[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
uuid = "1"
anyhow = "1"

# internal workspace crates
application = { path = "../application" }
connectors = { path = "../connectors" }
domain = { path = "../domain" }
